# planesections

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
doc/: .readthedocs.yaml  requirements.txt
doc/img/coords/: Coordinate Systems.ai
doc/readthedocs/: Readme.txt  index.rst
doc/readthedocs/_build/doctrees/: environment.pickle  index.doctree
doc/readthedocs/_build/html/: index.html
doc/readthedocs/planesections/: Changelog.txt  __init__.py  analysis.py  archetypes.py  builder.py  diagram.py  postprocess.py  requirements.txt  section.py
doc/readthedocs/planesections/analysis/: pynite.py
doc/readthedocs/planesections/diagram/: diagram.py
doc/readthedocs/planesections/postprocess/: __init__.py  plot.py
doc/readthedocs/source/: conf.py  index.rst
doc/readthedocs/source/rst/: analysis-PyNiteAnalyzer2D.rst  analysis-openSeesAnalyzer2D.rst  analysis-openSeesAnalyzer3D.rst  analysis-outputRecorder.rst  analysis-outputRecorder2D.rst  analysis.rst  builder-beam-beam.rst  builder-beam-beam2D.rst  builder-beam-eulerBeam.rst  builder-beam-eulerBeam2D.rst  builder-beam-fixity.rst  builder-beam-newEulerBeam.rst  builder-beam-newEulerBeam2D.rst  builder-beam-newSimpleEulerBeam.rst  builder-beam-newSimpleEulerBeam2D.rst  builder-beam-newSimpleTimoshenkoBeam.rst  builder-beam-newTimoshenkoBeam.rst  builder-beam.rst  (+35 more)
docs/readthedocs/: Readme.txt
docs/readthedocs/planesections/: diagram.py  requirements.txt
docs/readthedocs/source/: conf.py
example/: 1. Demo.py  1. hello world.py  Ex1-Demo.py  Ex1.py  Ex2.py  Ex3.py  Ex4.py
example/2. Analysis/: Ex2a-Basic Beam.py  Ex2b-Basic Beam Imperial.py  Ex2c-Complex Beam.py  Ex2d-3D Beam.py  Ex3a-Timoshenko Beam.py
example/3. Diagram Options/: Ex3.1 - Diagram lables.py  Ex3.2 - Unit Manager.py  Ex4.1 - Diagram lables.py  readme.md
example/4. Diagram Options/: Ex4.2 - Unit Manager.py
example/4. Managing Units/: Ex3 - Copy.py  Ex4.1 - Diagram Unit Manager.py
src/: Changelog.txt  __init__.py  abstractClasses.py  analysis.py  archetypes.py  builder.py  core.py  diagram.py  environment.py  postprocess.py  section.py
src/analysis/: __init__.py  openSees.py  pynite.py
src/diagram/: __init__.py  diagram.py  diagram_old.py
src/diagram/components/: basic.py  basic_old.py
src/planesections/: __init__.py  builder.py  environment.py  requirements.txt  section.py
src/planesections/analysis/: __init__.py  openSees.py  openSeesRT.py  pynite.py  recorder.py
src/planesections/diagram/: __init__.py  diagram.py
src/planesections/postprocess/: __init__.py  plot.py  poi.py
src/planesections/units/: metric.py
src/postprocess/: parse.py  plot.py  poi.py
src/units/: diagramUnits.py
test/: Ex1.py  Ex2.py  _test_builder_loads_linear.py  _test_postprocess.py  customEnv.json  manual_ops_beam.py  test_Beam_3D.py  test_Beam_PointLoad.py  test_Beam_PointLoad_IDs.py  test_Beam_Uniform.py  test_Node.py  test_analysis.py  test_analysis_3D.py  test_analysis_PointLoads1.py  test_analysis_PointLoads2.py  test_analysis_linearLoads.py  test_builder.py  test_builder_loads_linear.py  test_builder_loads_linear_FEM.py  test_diagram_box_normalization.py  test_diagram_box_overlap.py  test_diagram_box_stacking.py  test_diagram_boxes.py  test_diagram_labels.py  test_diagram_stackedForce.py  test_diagram_units.py  test_fixities.py  test_imports.py  test_labeling.py  test_poi.py  test_record.py  test_units_diagramEnv.py
test/.pylint.d/: test_SimpleBeam11.stats
test/PyNiteSolver/: test_analysis_PN.py  test_analysis_PointLoads1_PN.py  test_analysis_PointLoads2_PN.py  test_analysis_linearLoads_PN.py  test_analysis_uniform_PN.py
test/inactive/: Readme.txt
test/manual/: Diagram_stackedForce.py  Diagram_stackedForce_2.py  Diagram_stackedForce_3.py  Ex1.py  Ex2.py  Ex3.py  Ex4.py  Ex5.py  OpenSeesPy Beam.py  Speed Test.py  _test_postprocess.py  pyNiteSolver.py
test/openseesSolver/: test_analysis.py  test_analysis_3D.py  test_analysis_PointLoads2.py  test_analysis_linearLoads.py  test_analysis_timoshenko.py
test/openseesSolverRT/: test_Beam_3D.py  test_analysis.py  test_analysis_3D.py  test_analysis_PointLoads1.py  test_analysis_PointLoads2.py  test_analysis_uniform.py
(+65 files in other folders)
